# DAI

./: .dockerignore  .gitignore  Dockerfile  README.md  changes.md  docker-compose.yml  lectures.md  pyproject.toml  requirements.txt  requirements_colab.txt
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
exercises/: 02_CausalInference_solution.ipynb  02_CausalInference_students version.ipynb  03a_supervised_learning_students version.ipynb  03b_supervised_learning_students version.ipynb  03c_supervised_learning_students version.ipynb  04_unsupervised_learning_students version.ipynb  05a_deep_learning_students version.ipynb  05b_deep_learning_students version.ipynb
lectures/: 00_Intro.ipynb  01_Paradoxon.ipynb  02_CausalInference.ipynb  03a_supervised_learning.ipynb  03b_supervised_learning.ipynb  03c_supervised_learning.ipynb  04_unsupervised_learning.ipynb  05a_deep_learning.ipynb  05b_deep_learning.ipynb  decision_tree.dot
lectures/intros/: 001_Intro_to_jupyter.ipynb  002_Intro_to_python.ipynb  003_Intro_to_pandas.ipynb  004_Intro_to_numpy.ipynb  005_Intro_to_matplotlib.ipynb  008_3D_yield_curve.ipynb
mission/: mission_rubric.md
