[project]
name = "DAILectureRepo"
version = "2026.1.0.1"
description = ""
authors = [{ name = "Peter N Posch", email = "peter.posch@udo.edu" }]
requires-python = ">=3.12, <3.14"
readme = "README.md"
dependencies = [
    "pandas>=2.2.1,<3",
    "numpy>=2.1.0,<3",
    "openpyxl>=3.1.0,<4",
    "jupyter>=1.0.0,<2",
    "plotly>=5.20.0,<6",
    "matplotlib>=3.8.3,<4",
    "scikit-learn>=1.4.1.post1,<2",
    "mglearn>=0.2.0,<0.3",
    "graphviz>=0.20.3,<0.21",
    "keras>=3.1.1,<4",
    "tensorflow>=2.16.0,<3",
    "openai>=1.14.3,<2",
    "empiricaldist>=0.7.2,<0.8",
    "networkx>=3.2.1,<4",
    "seaborn>=0.13.2,<0.14",
    "poetry-plugin-export>=1.8.0,<2",
    "cryptography>=46.0.7",
    "Pygments>=2.20.0",
    "poetry>=2.3.3",
    "tables",
    "statsmodels",
    "plotnine",
    "stargazer",
    "dowhy",
    "wrds",
    "beautifulsoup4",
    "requests>=2.33.0",
    "newsapi-python",
    "lxml",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
